src/Pelagos/Bundle/AppBundle/Resources/public/css/download.css
#dataset_download {
    position: fixed;
    background-color: white;
    border: 2px solid black;
    padding: 5px;
    width: 50%;
    right: 20%;
    margin-top: 10px;
    top: 15%;
    z-index: 1000;
    border-radius: 8px;
    font-family: sans-serif, Verdana, Geneva, Arial, Helvetica;
}

#dataset_download_close {
    float: right;
    margin-top: -3px;
    margin-right: -3px;
    margin-left: 5px;
}

#dataset_download_content {
    margin: 0px 5px 10px 5px;
}

#dataset_download div.attr {
    margin-bottom: .5em;
}

#dataset_download span.attr {
    font-weight: bold;
}

.download_error {
    color: red;
    font-weight: bold;
    margin-top: 10px;
}

#pre_login {
    position: fixed;
    background-color: white;
    border: 2px solid black;
    padding: 5px;
    width: 580px;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 1000;
    border-radius: 8px;
}

#pre_login_close {
    position: absolute;
    float: right;
    top: 3px;
    right: 3px;
}

#pre_login div.attr {
    margin-bottom: .5em;
}

#pre_login span.attr {
    font-weight: bold;
}

#pre_login table {
    width: 100%;
}

#pre_login td {
    text-align: center;
}

#griidc-logo {
    margin: 5px;
}

#pre_login h3 {
    padding-bottom: 0px;
    margin-bottom: 5px;
}

.vex.vex-theme-os .vex-content {
    width: 675px !important;
}

